add href to index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <h2>Tournaments</h2>
 
     <ul>
-        <li>Best Face</li>
+        <li><a href="https://celebbattles.github.io/tournaments/bestface">Best Face</a></li>
     </ul>
 </body>
