--- a/tournaments/bestface.html
+++ b/tournaments/bestface.html
@@ -9,7 +9,7 @@
     <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Istok+Web|Roboto+Condensed:700' rel='stylesheet' type='text/css'>
 
-    <title>March Madness Stock Matchup</title>
+    <title>CelebBattles BestFace 2020</title>
 </head>
 <body>
     <header class="hero">
@@ -17,6 +17,7 @@
      <p class="intro" id="intro">CelebBattles</p>
          <h1 id="headline">Best Face</h1>
          <p class="year"><i class="fa fa-star"></i> 2020 <i class="fa fa-star"></i></p>
+         <img src="download.png" alt="Girl in a jacket" style="width:100px;height:100px;">
    </div>
     </header>
 
