--- a/tournaments/bestface.html
+++ b/tournaments/bestface.html
@@ -25,8 +25,8 @@
              <div class="round round-one current">
                 <div class="round-details">Round 1<br/></div>
                 <ul class="matchup">
-                   <li class="team team-top">Duke<span class="score">76</span></li>
-                   <li class="team team-bottom">Virginia<span class="score">82</span></li>
+                   <li class="team team-top"><a href="javascript:void(0);">Reddit <span class="score">76</span></a></li>
+                   <li class="team team-top"><a href="javascript:void(0);">Reddit <span class="score">76</span></a></li>
                 </ul>
                 <ul class="matchup">
                    <li class="team team-top">Wake Forest<span class="score">64</span></li>
@@ -90,7 +90,7 @@
                  </ul>
              </div>
              <!-- END ROUND ONE -->
-             <div class="round round-two">
+             <div class="round round-two current">
                 <div class="round-details">Round 2<br/></div>
                 <ul class="matchup">
                    <li class="team team-top">&nbsp;<span class="score">&nbsp;</span></li>
@@ -126,7 +126,7 @@
                  </ul>  
              </div>
              <!-- END ROUND TWO -->
-             <div class="round round-three">
+             <div class="round round-three current">
                 <div class="round-details">Round 3<br/></div>
                 <ul class="matchup">
                    <li class="team team-top">&nbsp;<span class="score">&nbsp;</span></li>
@@ -146,7 +146,7 @@
                  </ul>
              </div>
              <!-- END ROUND THREE -->
-             <div class="round quarterfinals">
+             <div class="round quarterfinals current">
                 <div class="round-details">Quarterfinals<br/></div>
                 <ul class="matchup">
                    <li class="team team-top">&nbsp;<span class="score">&nbsp;</span></li>
@@ -159,14 +159,14 @@
              </div>     
           </div>
           <div class="champion">
-             <div class="semis-l">
+             <div class="semis-l current">
                 <div class="round-details">Semifinals 1 <br/></div>
                 <ul class ="matchup championship">
                    <li class="team team-top">&nbsp;<span class="vote-count">&nbsp;</span></li>
                    <li class="team team-bottom">&nbsp;<span class="vote-count">&nbsp;</span></li>
                 </ul>
              </div>
-             <div class="final">
+             <div class="final current">
                 <i class="fa fa-trophy"></i>
                 <div class="round-details">Grand Finale <br/></div>
                 <ul class ="matchup championship">
@@ -174,7 +174,7 @@
                    <li class="team team-bottom">&nbsp;<span class="vote-count">&nbsp;</span></li>
                 </ul>
              </div>
-             <div class="semis-r">
+             <div class="semis-r current">
                 <div class="round-details">Semifinals 2 <br/></div>
                 <ul class ="matchup championship">
                    <li class="team team-top">&nbsp;<span class="vote-count">&nbsp;</span></li>
@@ -183,7 +183,7 @@
              </div>
           </div>
           <div class="split split-two">
-            <div class="round quarterfinals">
+            <div class="round quarterfinals current">
                 <div class="round-details">Quarterfinals<br/></div>
                 <ul class="matchup">
                    <li class="team team-top">&nbsp;<span class="score">&nbsp;</span></li>
@@ -194,7 +194,7 @@
                    <li class="team team-bottom">&nbsp;<span class="score">&nbsp;</span></li>
                 </ul>
              </div>  
-             <div class="round round-three">
+             <div class="round round-three current">
                 <div class="round-details">Round 3<br/></div>
                 <ul class="matchup">
                    <li class="team team-top">&nbsp;<span class="score">&nbsp;</span></li>
@@ -214,7 +214,7 @@
                  </ul>
              </div>
              <!-- END ROUND THREE -->    
-             <div class="round round-two">
+             <div class="round round-two current">
                 <div class="round-details">Round 2<br/></div>
                 <ul class="matchup">
                    <li class="team team-top">&nbsp;<span class="score">&nbsp;</span></li>
@@ -250,7 +250,7 @@
                  </ul>
              </div>
              <!-- END ROUND TWO -->
-             <div class="round round-one current">
+             <div class="round round-one current current">
                 <div class="round-details">Round 1<br/></div>
                 <ul class="matchup">
                    <li class="team team-top">Minnesota<span class="score">62</span></li>
