--- a/tournaments/bestface.html
+++ b/tournaments/bestface.html
@@ -24,6 +24,7 @@
           <div class="split split-one">
              <div class="round round-one current">
                 <div class="round-details">Round 1<br/></div>
+                <p>Group A</p>
                 <ul class="matchup">
                    <li class="team team-top"><a href="javascript:void(0);">Reddit <span class="score">76</span></a></li>
                    <li class="team team-top"><a href="javascript:void(0);">Reddit <span class="score">76</span></a></li>
@@ -40,6 +41,7 @@
                    <li class="team team-top">NC State<span class="score">74</span></li>
                    <li class="team team-bottom">Maryland<span class="score">92</span></li>
                 </ul>
+                <p>Group B</p>
                 <ul class="matchup">
                    <li class="team team-top">Georgia Tech<span class="score">78</span></li>
                    <li class="team team-bottom">Georgia<span class="score">80</span></li>
@@ -56,6 +58,7 @@
                    <li class="team team-top">Vanderbilt<span class="score">64</span></li>
                    <li class="team team-bottom">Gonzaga<span class="score">68</span></li>
                 </ul>
+                <p>Group C</p>
                 <ul class="matchup">
                     <li class="team team-top">Duke<span class="score">76</span></li>
                     <li class="team team-bottom">Virginia<span class="score">82</span></li>
@@ -72,6 +75,7 @@
                     <li class="team team-top">NC State<span class="score">74</span></li>
                     <li class="team team-bottom">Maryland<span class="score">92</span></li>
                  </ul>
+                 <p>Group D</p>
                  <ul class="matchup">
                     <li class="team team-top">Georgia Tech<span class="score">78</span></li>
                     <li class="team team-bottom">Georgia<span class="score">80</span></li>
@@ -252,6 +256,7 @@
              <!-- END ROUND TWO -->
              <div class="round round-one current current">
                 <div class="round-details">Round 1<br/></div>
+                <p>Group E</p>
                 <ul class="matchup">
                    <li class="team team-top">Minnesota<span class="score">62</span></li>
                    <li class="team team-bottom">Northwestern<span class="score">54</span></li>
@@ -268,6 +273,7 @@
                    <li class="team team-top">Purdue<span class="score">36</span></li>
                    <li class="team team-bottom">Boise State<span class="score">40</span></li>
                 </ul>
+                <p>Group F</p>
                 <ul class="matchup">
                    <li class="team team-top">Penn State<span class="score">38</span></li>
                    <li class="team team-bottom">Indiana<span class="score">44</span></li>
@@ -284,6 +290,7 @@
                    <li class="team team-top">Virginia Tech<span class="score">74</span></li>
                    <li class="team team-bottom">Dartmouth<span class="score">111</span></li>
                 </ul>
+                <p>Group G</p>
                 <ul class="matchup">
                     <li class="team team-top">Minnesota<span class="score">62</span></li>
                     <li class="team team-bottom">Northwestern<span class="score">54</span></li>
@@ -300,6 +307,7 @@
                     <li class="team team-top">Purdue<span class="score">36</span></li>
                     <li class="team team-bottom">Boise State<span class="score">40</span></li>
                  </ul>
+                 <p>Group H</p>
                  <ul class="matchup">
                     <li class="team team-top">Penn State<span class="score">38</span></li>
                     <li class="team team-bottom">Indiana<span class="score">44</span></li>
@@ -322,9 +330,6 @@
        </div>
     </section>
     <section class="share">
-       <div class="share-wrap">
-          <a class="share-icon" href="https://twitter.com/_joebeason"><i class="fa fa-twitter"></i></a>
-          <a class="share-icon" href="#"><i class="fa fa-facebook"></i></a>
-          <a class="share-icon" href="#"><i class="fa fa-envelope"></i></a>
-       </div>
+        <p>&nbsp;</p>
     </section>
+    </body>
