modified li width

--- a/tournaments/bestface.html
+++ b/tournaments/bestface.html
@@ -26,7 +26,7 @@
                 <div class="round-details">Round 1<br/></div>
                 <p>Group A</p>
                 <ul class="matchup">
-                   <li class="team team-top"><a href="javascript:void(0);">Reddit <span class="score">76</span></a></li>
+                   <li class="team team-top"><a href="javascript:void(0);">Alexandra Daddario&nbsp;<span class="score">76</span></a></li>
                    <li class="team team-top"><a href="javascript:void(0);">Reddit <span class="score">76</span></a></li>
                 </ul>
                 <ul class="matchup">
