--- a/tournaments/bestface.html
+++ b/tournaments/bestface.html
@@ -9,6 +9,7 @@
     <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Istok+Web|Roboto+Condensed:700' rel='stylesheet' type='text/css'>
     <title>CelebBattles BestFace 2020</title>
+    <link rel="icon" type="image/png" href="favicon.png"/>
  </head>
  <body>
     <header class="hero">
