--- a/tournaments/bestface.html
+++ b/tournaments/bestface.html
@@ -27,20 +27,20 @@
                 <div class="round-details">Round 1<br/></div>
                 <p>Group A</p>
                 <ul class="matchup">
-                   <li class="team team-top"><a href="https://reddit.com/gx7037">Sophie Turner</a></li>
-                   <li class="team team-top"><a href="https://reddit.com/gx7037">Rachel Mcadams</a></li>
+                   <li class="team team-top"><a href="https://reddit.com/gx7037" target="_blank">Sophie Turner</a></li>
+                   <li class="team team-top"><a href="https://reddit.com/gx7037" target="_blank">Rachel Mcadams</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="https://reddit.com/gx6zpg">Kate Mara</a></li>
-                    <li class="team team-top"><a href="https://reddit.com/gx6zpg">Alexandra Daddario</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/gx6zpg" target="_blank">Kate Mara</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/gx6zpg" target="_blank">Alexandra Daddario</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="https://reddit.com/gx7005">Emily Ratajkowski</a></li>
-                    <li class="team team-top"><a href="https://reddit.com/gx7005">Jennifer Connelly</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/gx7005" target="_blank">Emily Ratajkowski</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/gx7005" target="_blank">Jennifer Connelly</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="https://reddit.com/gx6zv9">Taylor Swift</a></li>
-                    <li class="team team-top"><a href="https://reddit.com/gx6zv9">Jennifer Lawrence</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/gx6zv9" target="_blank">Taylor Swift</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/gx6zv9" target="_blank">Jennifer Lawrence</a></li>
                 </ul>
                 <p>Group B</p>
                 <ul class="matchup">
