--- a/tournaments/bestface.html
+++ b/tournaments/bestface.html
@@ -10,6 +10,15 @@
     <link href='https://fonts.googleapis.com/css?family=Istok+Web|Roboto+Condensed:700' rel='stylesheet' type='text/css'>
     <title>CelebBattles Best Face</title>
     <link rel="icon" type="image/png" href="favicon.png"/>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-168647005-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-168647005-1');
+    </script>
  </head>
  <body>
     <header class="hero">
