group 2 matches, loser style

--- a/tournaments/bestface.html
+++ b/tournaments/bestface.html
@@ -36,37 +36,37 @@
                 <div class="round-details">Round 1<br/></div>
                 <p>Group A</p>
                 <ul class="matchup">
-                   <li class="team team-top"><a href="https://reddit.com/gx7037" target="_blank">Sophie Turner</a></li>
+                   <li class="loser team-top"><a href="https://reddit.com/gx7037" target="_blank">Sophie Turner</a></li>
                    <li class="team team-top"><a href="https://reddit.com/gx7037" target="_blank">Rachel Mcadams</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="https://reddit.com/gx6zpg" target="_blank">Kate Mara</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/gx6zpg" target="_blank">Kate Mara</a></li>
                     <li class="team team-top"><a href="https://reddit.com/gx6zpg" target="_blank">Alexandra Daddario</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="https://reddit.com/gx7005" target="_blank">Emily Ratajkowski</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/gx7005" target="_blank">Emily Ratajkowski</a></li>
                     <li class="team team-top"><a href="https://reddit.com/gx7005" target="_blank">Jennifer Connelly</a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top"><a href="https://reddit.com/gx6zv9" target="_blank">Taylor Swift</a></li>
-                    <li class="team team-top"><a href="https://reddit.com/gx6zv9" target="_blank">Jennifer Lawrence</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/gx6zv9" target="_blank">Jennifer Lawrence</a></li>
                 </ul>
                 <p>Group B</p>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Blake Lively</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Emily Blunt</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/gzilwh" target="_blank">Blake Lively</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/gzilwh" target="_blank">Emily Blunt</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Anne Hathaway</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Mila Kunis</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/gzilza" target="_blank">Anne Hathaway</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/gzilza" target="_blank">Mila Kunis</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Kate Beckinsale</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Ana De Armas</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/gzim0y" target="_blank">Kate Beckinsale</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/gzim0y" target="_blank">Ana De Armas</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Emma Roberts</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Hailee Steinfield</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/gzim2u" target="_blank">Emma Roberts</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/gzim2u" target="_blank">Hailee Steinfield</a></li>
                 </ul>
                 <p>Group C</p>
                 <ul class="matchup">
@@ -107,12 +107,12 @@
              <div class="round round-two current">
                 <div class="round-details">Round 2<br/></div>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Rachel Mcadams</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Alexandra Daddario</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Jennifer Connelly</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Taylor Swift</a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
