--- a/tournaments/bestface.html
+++ b/tournaments/bestface.html
@@ -54,36 +54,36 @@
                 <p>Group B</p>
                 <ul class="matchup">
                     <li class="team team-top"><a href="https://reddit.com/gzilwh" target="_blank">Blake Lively</a></li>
-                    <li class="team team-top"><a href="https://reddit.com/gzilwh" target="_blank">Emily Blunt</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/gzilwh" target="_blank">Emily Blunt</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="https://reddit.com/gzilza" target="_blank">Anne Hathaway</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/gzilza" target="_blank">Anne Hathaway</a></li>
                     <li class="team team-top"><a href="https://reddit.com/gzilza" target="_blank">Mila Kunis</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="https://reddit.com/gzim0y" target="_blank">Kate Beckinsale</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/gzim0y" target="_blank">Kate Beckinsale</a></li>
                     <li class="team team-top"><a href="https://reddit.com/gzim0y" target="_blank">Ana De Armas</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="https://reddit.com/gzim2u" target="_blank">Emma Roberts</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/gzim2u" target="_blank">Emma Roberts</a></li>
                     <li class="team team-top"><a href="https://reddit.com/gzim2u" target="_blank">Hailee Steinfield</a></li>
                 </ul>
                 <p>Group C</p>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Scarlett Johansson</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Anya Taylor-Joy</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/h87tq2">Scarlett Johansson</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/h87tq2">Anya Taylor-Joy</a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Barbara Palvin</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Alsion Brie</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/h87tkd">Barbara Palvin</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/h87tkd">Alsion Brie</a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Amy Adams</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Emilia Clarke</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/h87thj">Amy Adams</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/h87thj">Emilia Clarke</a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Mary Elizabeth Winstead</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Kate Upton</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/h87tnl">Mary Elizabeth Winstead</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/h87tnl">Kate Upton</a></li>
                  </ul>
                  <p>Group D</p>
                  <ul class="matchup">
@@ -115,12 +115,12 @@
                     <li class="team team-top"><a href="javascript:void(0);">Taylor Swift</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Blake Lively</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Mila Kunis</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Ana De Armas</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Hailee Steinfeild</a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
