--- a/tournaments/bestface.html
+++ b/tournaments/bestface.html
@@ -70,37 +70,37 @@
                 </ul>
                 <p>Group C</p>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="https://reddit.com/h87tq2">Scarlett Johansson</a></li>
-                    <li class="team team-top"><a href="https://reddit.com/h87tq2">Anya Taylor-Joy</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/h87tq2" target="_blank">Scarlett Johansson</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/h87tq2" target="_blank">Anya Taylor-Joy</a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top"><a href="https://reddit.com/h87tkd">Barbara Palvin</a></li>
-                    <li class="team team-top"><a href="https://reddit.com/h87tkd">Alsion Brie</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/h87tkd" target="_blank">Barbara Palvin</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/h87tkd" target="_blank">Alsion Brie</a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top"><a href="https://reddit.com/h87thj">Amy Adams</a></li>
-                    <li class="team team-top"><a href="https://reddit.com/h87thj">Emilia Clarke</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/h87thj" target="_blank">Amy Adams</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/h87thj" target="_blank">Emilia Clarke</a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top"><a href="https://reddit.com/h87tnl">Mary Elizabeth Winstead</a></li>
-                    <li class="team team-top"><a href="https://reddit.com/h87tnl">Kate Upton</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/h87tnl" target="_blank">Mary Elizabeth Winstead</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/h87tnl" target="_blank">Kate Upton</a></li>
                  </ul>
                  <p>Group D</p>
                  <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Jessica Biel</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Victoria Justice</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hbf35u" target="_blank">Jessica Biel</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hbf35u" target="_blank">Victoria Justice</a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Kristen Bell</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Nina Dobrev</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hbf39l" target="_blank">Kristen Bell</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hbf39l" target="_blank">Nina Dobrev</a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Natalie Portman</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Zooey Deschanel</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hbf3bj" target="_blank">Natalie Portman</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hbf3bj" target="_blank">Zooey Deschanel</a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Jessica Alba</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Alia Bhatt</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hbf3eu" target="_blank">Jessica Alba</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hbf3eu" target="_blank">Alia Bhatt</a></li>
                  </ul>
              </div>
              <!-- END ROUND ONE -->
@@ -123,12 +123,12 @@
                     <li class="team team-top"><a href="javascript:void(0);">Hailee Steinfeild</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Scarlett Johansson</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Barbara Palvin</a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Emilia Clarke</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Kate Upton</a></li>
                  </ul>
                  <ul class="matchup">
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
