--- a/tournaments/bestface.html
+++ b/tournaments/bestface.html
@@ -87,20 +87,20 @@
                  </ul>
                  <p>Group D</p>
                  <ul class="matchup">
-                    <li class="team team-top"><a href="https://reddit.com/hbf35u" target="_blank">Jessica Biel</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/hbf35u" target="_blank">Jessica Biel</a></li>
                     <li class="team team-top"><a href="https://reddit.com/hbf35u" target="_blank">Victoria Justice</a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top"><a href="https://reddit.com/hbf39l" target="_blank">Kristen Bell</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/hbf39l" target="_blank">Kristen Bell</a></li>
                     <li class="team team-top"><a href="https://reddit.com/hbf39l" target="_blank">Nina Dobrev</a></li>
                  </ul>
                  <ul class="matchup">
                     <li class="team team-top"><a href="https://reddit.com/hbf3bj" target="_blank">Natalie Portman</a></li>
-                    <li class="team team-top"><a href="https://reddit.com/hbf3bj" target="_blank">Zooey Deschanel</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/hbf3bj" target="_blank">Zooey Deschanel</a></li>
                  </ul>
                  <ul class="matchup">
                     <li class="team team-top"><a href="https://reddit.com/hbf3eu" target="_blank">Jessica Alba</a></li>
-                    <li class="team team-top"><a href="https://reddit.com/hbf3eu" target="_blank">Alia Bhatt</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/hbf3eu" target="_blank">Alia Bhatt</a></li>
                  </ul>
              </div>
              <!-- END ROUND ONE -->
@@ -131,12 +131,12 @@
                     <li class="team team-top"><a href="javascript:void(0);">Kate Upton</a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Victoria Justice</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Nina Dobrev</a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Natalie Portman</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Jessica Alba</a></li>
                  </ul>  
              </div>
              <!-- END ROUND TWO -->
@@ -268,20 +268,20 @@
                 <div class="round-details">Round 1<br/></div>
                 <p>Group E</p>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Miranda Kerr</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Margot Robbie</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hf8hwm" target="_blank">Miranda Kerr</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hf8hwm" target="_blank">Margot Robbie</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Emma Stone</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Cobie Smulders</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hf8i1i" target="_blank">Emma Stone</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hf8i1i" target="_blank">Cobie Smulders</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Brie Larson</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Rosario Dawson</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hf8i4r" target="_blank">Brie Larson</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hf8i4r" target="_blank">Rosario Dawson</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Natalia Dyer</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Natalie Dormer</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hf8i7q" target="_blank">Natalia Dyer</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hf8i7q" target="_blank">Natalie Dormer</a></li>
                 </ul>
                 <p>Group F</p>
                 <ul class="matchup">
