--- a/tournaments/bestface.html
+++ b/tournaments/bestface.html
@@ -231,12 +231,12 @@
              <div class="round round-two current">
                 <div class="round-details">Round 2<br/></div>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Margot Robbie</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Emma Stone</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Brie Larson</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Natalie Dormer</a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
@@ -268,37 +268,37 @@
                 <div class="round-details">Round 1<br/></div>
                 <p>Group E</p>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="https://reddit.com/hf8hwm" target="_blank">Miranda Kerr</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/hf8hwm" target="_blank">Miranda Kerr</a></li>
                     <li class="team team-top"><a href="https://reddit.com/hf8hwm" target="_blank">Margot Robbie</a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top"><a href="https://reddit.com/hf8i1i" target="_blank">Emma Stone</a></li>
-                    <li class="team team-top"><a href="https://reddit.com/hf8i1i" target="_blank">Cobie Smulders</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/hf8i1i" target="_blank">Cobie Smulders</a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top"><a href="https://reddit.com/hf8i4r" target="_blank">Brie Larson</a></li>
-                    <li class="team team-top"><a href="https://reddit.com/hf8i4r" target="_blank">Rosario Dawson</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/hf8i4r" target="_blank">Rosario Dawson</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="https://reddit.com/hf8i7q" target="_blank">Natalia Dyer</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/hf8i7q" target="_blank">Natalia Dyer</a></li>
                     <li class="team team-top"><a href="https://reddit.com/hf8i7q" target="_blank">Natalie Dormer</a></li>
                 </ul>
                 <p>Group F</p>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Monica Bellucci</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Yvonne Strahovski</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hipbac" target="_blank">Monica Bellucci</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hipbac" target="_blank">Yvonne Strahovski</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Deepika Padukone</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Hayley Atwell</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hipbd0" target="_blank">Deepika Padukone</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hipbd0" target="_blank">Hayley Atwell</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Charlize Theron</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Alice Eve</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hipbfu" target="_blank">Charlize Theron</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hipbfu" target="_blank">Alice Eve</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Jessica Chastain</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Gal Gadot</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hipbih" target="_blank">Jessica Chastain</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hipbih" target="_blank">Gal Gadot</a></li>
                 </ul>
                 <p>Group G</p>
                 <ul class="matchup">
