--- a/tournaments/bestface.html
+++ b/tournaments/bestface.html
@@ -239,12 +239,12 @@
                     <li class="team team-top"><a href="javascript:void(0);">Natalie Dormer</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Yvonne Strahovski</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Hayley Atwell</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Alice Eve</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Gal Gadot</a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
@@ -285,37 +285,37 @@
                 </ul>
                 <p>Group F</p>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="https://reddit.com/hipbac" target="_blank">Monica Bellucci</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/hipbac" target="_blank">Monica Bellucci</a></li>
                     <li class="team team-top"><a href="https://reddit.com/hipbac" target="_blank">Yvonne Strahovski</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="https://reddit.com/hipbd0" target="_blank">Deepika Padukone</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/hipbd0" target="_blank">Deepika Padukone</a></li>
                     <li class="team team-top"><a href="https://reddit.com/hipbd0" target="_blank">Hayley Atwell</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="https://reddit.com/hipbfu" target="_blank">Charlize Theron</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/hipbfu" target="_blank">Charlize Theron</a></li>
                     <li class="team team-top"><a href="https://reddit.com/hipbfu" target="_blank">Alice Eve</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="https://reddit.com/hipbih" target="_blank">Jessica Chastain</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/hipbih" target="_blank">Jessica Chastain</a></li>
                     <li class="team team-top"><a href="https://reddit.com/hipbih" target="_blank">Gal Gadot</a></li>
                 </ul>
                 <p>Group G</p>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Emmy Rossum</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Anna Kendrick</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hl58j2" target="_blank">Emmy Rossum</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hl58j2" target="_blank">Anna Kendrick</a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Ashley Benson</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Gemma Arterton</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hl58n4" target="_blank">Ashley Benson</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hl58n4" target="_blank">Gemma Arterton</a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Amber Heard</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Emma Watson</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hl58ri" target="_blank">Amber Heard</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hl58ri" target="_blank">Emma Watson</a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Olivia Wilde</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Megan Fox</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hl58u7" target="_blank">Olivia Wilde</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hl58u7" target="_blank">Megan Fox</a></li>
                  </ul>
                  <p>Group H</p>
                  <ul class="matchup">
