--- a/tournaments/bestface.html
+++ b/tournaments/bestface.html
@@ -247,12 +247,12 @@
                     <li class="team team-top"><a href="javascript:void(0);">Gal Gadot</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Anna Kendrick</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Gemma Arterton</a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Emma Watson</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Olivia Wilde</a></li>
                  </ul>
                  <ul class="matchup">
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
@@ -302,37 +302,37 @@
                 </ul>
                 <p>Group G</p>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="https://reddit.com/hl58j2" target="_blank">Emmy Rossum</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/hl58j2" target="_blank">Emmy Rossum</a></li>
                     <li class="team team-top"><a href="https://reddit.com/hl58j2" target="_blank">Anna Kendrick</a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top"><a href="https://reddit.com/hl58n4" target="_blank">Ashley Benson</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/hl58n4" target="_blank">Ashley Benson</a></li>
                     <li class="team team-top"><a href="https://reddit.com/hl58n4" target="_blank">Gemma Arterton</a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top"><a href="https://reddit.com/hl58ri" target="_blank">Amber Heard</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/hl58ri" target="_blank">Amber Heard</a></li>
                     <li class="team team-top"><a href="https://reddit.com/hl58ri" target="_blank">Emma Watson</a></li>
                  </ul>
                  <ul class="matchup">
                     <li class="team team-top"><a href="https://reddit.com/hl58u7" target="_blank">Olivia Wilde</a></li>
-                    <li class="team team-top"><a href="https://reddit.com/hl58u7" target="_blank">Megan Fox</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/hl58u7" target="_blank">Megan Fox</a></li>
                  </ul>
                  <p>Group H</p>
                  <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Amanda Seyfried</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Marisa Tomei</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hoquxd" target="_blank">Amanda Seyfried</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hoquxd" target="_blank">Marisa Tomei</a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Elisha Cuthbert</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Elizabeth Olsen</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hoqv0d" target="_blank">Elisha Cuthbert</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hoqv0d" target="_blank">Elizabeth Olsen</a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Rose Bryne</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Zoey Deutch</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hoqv2h" target="_blank">Rose Bryne</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hoqv2h" target="_blank">Zoey Deutch</a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Nathalie Emmanuel</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Brookyln Decker</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hoqv4s" target="_blank">Nathalie Emmanuel</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hoqv4s" target="_blank">Brookyln Decker</a></li>
                  </ul>
              </div>
              <!-- END ROUND ONE -->                          
